--- a/messaging_app/Dockerfile
+++ b/messaging_app/Dockerfile
@@ -8,6 +8,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
+# -p is not a valid command/property in Dockerfile
 EXPOSE 8000
 
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
