--- a/messaging_app/docker-compose.yml
+++ b/messaging_app/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     ports:
       - "3306:3306"
     environment:
+      # MYSQL_DB is not a valid field as per officlial mysql image on Docker Hub
       - MYSQL_ROOT_PASSWORD=password
       - MYSQL_DATABASE=messaging_app_db
       - MYSQL_USER=db_user
